--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,2 @@
-<h1>This is the about page of my blog app</h1>
-
+<h1>Post articles about your favorite or least favorite anime!</h1>
 <%= link_to "Home", root_path %>
