--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="center jumbotron">
-  <h1>ALPHA BLOG</h1>
+  <h1>ANICHAT</h1>
   <%= link_to "Sign Up Now", signup_path, class: "btn btn-info btn-lg btn-xlarge" %>
 </div>
