--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -33,7 +33,7 @@
       </div>
     </div>
     <% end %>
-    <div class="col-xs-4 col-xs-offset-5">
+    <div class="return col-xs-4 col-xs-offset-5">
     [ <%= link_to "Return to articles listing", articles_path %> ]
     </div>
   </div>
