--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">Listing All Categories</h1>
+<h1 class="center"><b>Listing All Genres</h1></b>
 <div align="center">
   <%= will_paginate %>
   <% @categories.each do |category| %>
