--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Created by Andy
+      Created by Andy Chen
     </small>
     <nav>
         <ul>
