--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">All Users</h1>
+<h1 class="center">All Existing Users</h1>
 <div align="center">
   <%= will_paginate %>
   <% @users.each do |user| %>
@@ -9,8 +9,10 @@
           <li class="article-title"><%= link_to user.username, user_path(user) %></li>
           <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
           <% if logged_in? && current_user.admin? %>
-            <li><%= link_to "Delete this user", user_path(user), method: :delete,
-              data: {confirm: "Are you sure you want to delete user and their articles?"} %></li>
+            <div class="user_delete">
+              <li><%= link_to "Delete this user", user_path(user), method: :delete,
+                data: {confirm: "Are you sure you want to delete user and their articles?"} %></li>
+            </div>
           <% end %>
         </div>
       </div>
