--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -6,15 +6,15 @@
     <%= f.label :name %>
   </div>
   <div class ="col-sm-8">
-    <%= f.text_field :name, class: "form-control", placeholder: "Category Name", autofocus: true %>
+    <%= f.text_field :name, class: "form-control", placeholder: "Genre Name", autofocus: true %>
   </div>
 </div>
 <div class="form-group">
   <div class="col-sm-offset-2 col-sm-10">
-    <%= f.submit class: "btn btn-primary btn-lg" %>
+    <%= f.submit genre_submit_text, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
 <% end %>
-<div class="col-xs-4 col-xs-offset-5">
+<div class="return col-xs-4 col-xs-offset-5">
 [ <%= link_to "Return to articles listing", articles_path %> ]
 </div>
