--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div class="center jumbotron">
   <h1>ANICHAT</h1>
+  <p>Post articles about your favorite or least favorite anime!</p>
   <%= link_to "Sign Up Now", signup_path, class: "btn btn-info btn-lg btn-xlarge" %>
 </div>
