--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -48,6 +48,8 @@
             <ul class="dropdown-menu">
               <li><%= link_to 'View your profile', user_path(current_user)%></li>
               <li><%= link_to 'Edit your profile', edit_user_path(current_user)%></li>
+              <li><%= link_to 'Change your avatar', user_avatar_path %></li>
+
             </ul>
           </li>
         <% else %>
