--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,14 @@
-<h1 class="center">Welcome to <%= @user.username %>'s Page</h1>
+<h1 class="center capitalize">Welcome to <%= @user.username %>'s Page</h1>
 <div class="row">
   <div class="col-md-4 col-md-offset-4 center">
-    <%= gravatar_for @user, size: 150 %>
+    <% if @user.avatar != nil %>
+      <%= link_to image_tag("#{@user.avatar.image}", class: "avatar"), user_avatar_path %>
+    <% else %>
+      <%= image_tag("mugi.png", class: "avatar") %>
+    <% end %>
   </div>
 </div>
-<h4 align="center"><%= @user.username %>'s articles</h4>
+<h4 align="center" class="capitalize"><%= @user.username %>'s articles</h4>
 <div class="center">
   <%= will_paginate @user_articles %>
 </div>
