--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,11 @@
    <ul class="listing">
       <div class="row">
         <div class="well col-md-4 col-md-offset-4">
-          <li><%= link_to gravatar_for(user), user_path(user) %></li>
+          <% if user.avatar != nil %>
+            <li><%= link_to image_tag("#{user.avatar.image}", class: "avatar") %></li>
+          <% else %>
+            <li><%= link_to image_tag("mugi.png", class: "avatar") %></li>
+          <% end %>
           <li class="article-title"><%= link_to user.username, user_path(user) %></li>
           <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
           <% if logged_in? && current_user.admin? %>
