--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,11 @@
        <div class="row">
          <div class="col-md-4 col-md-offset-4">
            <li>Created by:</li>
-           <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+           <% if @article.user.avatar != nil %>
+             <li><%= link_to image_tag("#{@article.user.avatar.image}", class: "avatar")%></li>
+           <% else %>
+             <li><%= link_to image_tag("mugi.png", class: "avatar")%></li>
+           <% end %>
            <li class="article-title"><%= link_to @article.user.username, user_path(@article.user) %></li>
            <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small></li>
          </div>
